# sciencebeam-dataset-builder

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: github-actions-ci.yml
notebooks/: check_biorxiv_10k_overlap.py  explore_scielo_preprints_jats.py
sciencebeam_dataset_builder/: europepmc_api.py  scielo_preprints_cli.py
sciencebeam_dataset_builder/scielo_preprints/: europepmc_ftp.py  hf_dataset_cli.py  metadata_cli.py  retrieve_cli.py  split_cli.py
sciencebeam_dataset_builder/split_parquet_files/: split_parquet.py
tests/: test_europepmc_api.py  test_europepmc_ftp.py  test_scielo_preprints_cli.py
tests/scielo_preprints/: test_europepmc_api.py  test_europepmc_ftp.py  test_metadata_cli.py  test_scielo_preprints_cli.py  test_split_cli.py
