[project]
name = "sciencebeam-dataset-builder"
version = "0.0.0"
description = "ScienceBeam Dataset Builder"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32",
    "tqdm>=4.67.3",
]

[tool.ruff]
target-version = "py313"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
python_version = "3.13"

[dependency-groups]
dev = [
    "mypy>=1.15",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "types-requests>=2.32.4.20260324",
    "types-tqdm>=4.67.3.20260303",
]
