[project]
name = "sciencebeam-dataset-builder"
version = "0.0.0"
description = "ScienceBeam Dataset Builder"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ftfy>=6.0",
    "huggingface-hub[cli]>=0.27",
    "pandas>=2.0",
    "pyarrow>=19.0",
    "requests>=2.32",
    "scikit-learn>=1.0",
    "tqdm>=4.67.3",
]

[project.scripts]
sciencebeam-dataset-builder = "sciencebeam_dataset_builder.scielo_preprints.retrieve_cli:main"

[tool.ruff]
target-version = "py313"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
python_version = "3.13"

[[tool.mypy.overrides]]
module = ["tests.*", "tests.*.*", "notebooks.*"]
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_any_generics = false

[[tool.mypy.overrides]]
module = ["datasets", "datasets.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "datasets>=3.0",
    "mypy>=1.15",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "types-requests>=2.32.4.20260324",
    "types-tqdm>=4.67.3.20260303",
]
